--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,24 @@
-## MAC OS
-.DS_Store
-
-## TEXTMATE
-*.tmproj
-tmtags
-
-## EMACS
-*~
-\#*
-.\#*
-
-## VIM
-*.swp
-
-## PROJECT::GENERAL
-coverage
-rdoc
-pkg
-
-## PROJECT::SPECIFIC
-.rspec
-docs/
-.yardoc/
-
-## BUNDLER ##
-bin/
-vendor/
+*.gem
+*.rbc
+.bundle
+.config
+.yardoc
 Gemfile.lock
+InstalledFiles
+_yardoc
+coverage
+doc/
+docs/
+lib/bundler/man
+pkg
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
+.rbx/
+.rspec
+bin/
+vendor/ruby/
+vendor.noindex/ruby/
+.DS_Store
